Preventing slide cutoff

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -474,8 +474,7 @@ body.with-header {
 .review-carousel {
     overflow: hidden;           
     width: 100%;
-    height: clamp(350px, 40vw, 700px);
-    padding-bottom: 20px;
+    height: clamp(350px, 45vw, 750px);
     position: relative;
 }
 
